# growthos

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  SETUP.md  Verify-Project.ps1  docker-compose.yml  mcp_config.json  package-lock.json  start-dev.ps1
backend/: Dockerfile  pyproject.toml  railway.json  requirements.txt
backend/app/: main.py
backend/app/api/v1/: ai_chat.py  ai_specialist.py  analytics.py  api_keys.py  attribution.py  audit.py  auth.py  automation.py  billing.py  bing_ads.py  campaigns.py  channels.py  commerce.py  crm.py  customers.py  dashboard.py  finance.py  forecast.py  integrations.py  klaviyo.py  meta_capi.py  notifications.py  oauth.py  operations.py  organizations.py  payments.py  products.py  profit.py  razorpay_int.py  reports.py  router.py  scheduled_reports.py  seo.py  settings.py  shipping.py  snapchat_ads.py  superadmin.py  (+6 more)
backend/app/core/: __init__.py  audit_middleware.py  auth.py  config.py  database.py  rbac.py  security.py  tenant.py  vault.py
backend/app/jobs/: scheduler.py
backend/app/midleware/: auth_middleware.py  logging_middleware.py
backend/app/models/: dashboard.py  integration.py  metrics.py  settings.py
backend/app/repositories/: automation_repo.py  campaign_repo.py  crm_repo.py  customer_repo.py  forecast_repo.py  integration_repo.py  metrics_repo.py  notification_repo.py  product_repo.py  profit_repo.py  sync_repo.py  workspace_repo.py
backend/app/services/: customer_service.py  google_service.py  meta_service.py  metrics_service.py  shopify_product_service.py  shopify_service.py  sync_service.py
(+186 files in other folders)
